css/global.css
/* ... */
@media only screen and (min-width:960px) {
    .section__name:after {
        color: white;
        background: url(../images/circle-white-large.png) no-repeat;
        -webkit-background-size: 11px 11px;
        -moz-background-size: 11px 11px;
        background-size: 11px 11px;
        width: 11px;
        height: 11px;
        right: -webkit-calc(100% - 20px);
        right: -moz-calc(100% - 20px);
        right: calc(100% - 20px);
        top: -webkit-calc(50% - 1px);
        top: -moz-calc(50% - 1px);
        top: calc(50% - 1px)
    }
}

@media only screen and (min-width:1100px) {
    .section__name:after {
        right: -webkit-calc((100vw + 87.5% - 20px) / 2);
        right: -moz-calc((100vw + 87.5% - 20px) / 2);
        right: calc((100vw + 87.5% - 20px) / 2)
    }
}

.section__copyTitle {
    margin-bottom: 15px;
    font-family: 'Poppins', sans-serif;
    font-weight: 600;
    font-style: normal;
    font-display: swap;
    font-size: 4.25rem;
    line-height: 4.75rem;
    text-transform: lowercase
}

@media only screen and (min-width:960px) {
    .section__copyTitle {
        font-size: 6.5rem;
        line-height: 6rem
    }
}

.centeredText {
    padding: 0 25px;
    max-width: 650px;
    margin: 0 auto;
    text-align: center
}

.errorContent {
    padding-top: 150px;
    padding-bottom: 100px
}

@media only screen and (min-width:960px) {
    .errorContent {
        padding: 250px 0
    }
}

.errorContent--inner {
    padding: 0 25px;
    max-width: 1050px
}

@media only screen and (min-width:960px) {
    .errorContent--inner {
        padding: 0 7.5%
    }
}

.errorContent__title {
    text-align: center;
    line-height: 5rem
}

@media only screen and (min-width:960px) {
    .errorContent__title {
        line-height: 7.5rem
    }
}

.pageError {
    padding: 100px 0
}

@media only screen and (min-width:960px) {
    .pageError {
        padding: 200px 0
    }
}

.pageError--inner {
    width: 100%;
    padding: 0 25px;
    max-width: 850px;
    margin: 0 auto;
    text-align: center
}

.pageError__title {
    font-family: 'Poppins', sans-serif;
    font-weight: 700;
    font-style: normal;
    font-display: swap;
    font-size: 3.5rem;
    line-height: 4.5rem;
    text-align: center;
    margin-bottom: 50px
}

@media only screen and (min-width:960px) {
    .pageError__title {
        font-size: 7rem;
        line-height: 9rem
    }
}

.pageError__subtitle {
    font-family: 'Poppins', sans-serif;
    font-weight: 600;
    font-style: normal;
    font-display: swap;
    margin-bottom: 20px
}

.siteFooter {
    background: #000;
    padding: 54px 0;
    position: relative;
    z-index: 8;
    text-align: center
}

@media only screen and (min-width:960px) {
    .siteFooter {
        padding: 54px 0
    }
}

.siteFooter--inner {
    padding: 0 25px
}

@media only screen and (min-width:960px) {
    .siteFooter--inner {
        width: 100%;
        margin: 0 auto
    }
}

@media only screen and (min-width:1100px) {
    .siteFooter--inner {
        padding: 0 7.5%
    }
}

.siteFooter__logo {
    width: 135px;
    height: auto;
    display: block;
    margin: 0 auto 45px auto
}

@media only screen and (min-width:480px) {
    .siteFooter__logo {
        margin-bottom: 12px
    }
}

.siteFooter__nav {
    display: block;
    margin-left: -30px;
}

@media only screen and (min-width:480px) {
    .siteFooter__nav {
        display: -webkit-box;
        display: -webkit-flex;
        display: -moz-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-align: center;
        -webkit-align-items: center;
        -moz-box-align: center;
        -ms-flex-align: center;
        align-items: center;
        -webkit-box-pack: center;
        -webkit-justify-content: center;
        -moz-box-pack: center;
        -ms-flex-pack: center;
        justify-content: center;
        list-style: none;
        margin: 0 0 50px 0;
        padding: 0
    }

    .siteFooter__nav li {
        margin: 0 10px;
        font-family: 'Poppins', sans-serif;
        font-weight: 500;
        font-style: normal;
        font-display: swap;
        font-size: 1rem;
        text-transform: lowercase
    }

    .siteFooter__nav a {
        color: #c1c1c1
    }
}

.fa-at{
    color: white;
}

.fa-phone{
    color: white;
}

@media only screen and (min-width:960px) {
    .siteFooter__nav a:hover {
        color: #db3574
    }

    .siteFooter__nav li {
        font-size: 2rem;
    }
}

@media only screen and (min-width:650px) {
    .siteFooter__flexContainer {
        display: -webkit-box;
        display: -webkit-flex;
        display: -moz-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-pack: justify;
        -webkit-justify-content: space-between;
        -moz-box-pack: justify;
        -ms-flex-pack: justify;
        justify-content: space-between;
        text-align: left
    }
}

@media only screen and (min-width:650px) {
    .siteFooter__flexChild--artist {
        -webkit-box-ordinal-group: 3;
        -webkit-order: 2;
        -moz-box-ordinal-group: 3;
        -ms-flex-order: 2;
        order: 2;
        width: 235px
    }
}

@media only screen and (min-width:650px) {
    .siteFooter__flexChild--social {
        -webkit-box-ordinal-group: 2;
        -webkit-order: 1;
        -moz-box-ordinal-group: 2;
        -ms-flex-order: 1;
        order: 1
    }
}

@media only screen and (min-width: 768px){
    .siteFooter__nav{
        margin-top: 60px;
        margin-left: -120px;
    }
}

@media only screen and (min-width: 1024px){
    .siteFooter__nav{
        padding-top: 30px;
        margin-left: -110px;
    }
}
/* ... */

